--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,14 @@ body {
     background-color: cadetblue;
 }
 
+h1 {
+    text-align: center;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 50px;
+    ;
+}
+
 #app {
     display: flex;
     align-items: center;
